gtk support #todo
merge fixes

update