@@ -1,11 +1,11 @@
-import org.jetbrains.compose.desktop.application.dsl.TargetFormat
-import org.jetbrains.kotlin.config.JvmTarget
+import org.jetbrains.kotlin.gradle.dsl.KotlinJvmCompilerOptions
 import org.mjdev.gradle.extensions.ProjectExt.createTask
 import org.mjdev.gradle.extensions.ProjectExt.resolve
 
 plugins {
+    java
+    application
     alias(libs.plugins.kotlin.jvm)
-    alias(libs.plugins.compose.desktop)
     alias(libs.plugins.kotlin.serialization)
     alias(libs.plugins.gradle.versions)
 //    DesktopPlugin
@@ -17,20 +17,19 @@ plugins {
 group = libs.versions.packageName.get()
 version = libs.versions.packageVersion.get()
 
+java {
+    sourceCompatibility = JavaVersion.VERSION_22
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(22)
+    }
+}
+
 kotlin {
-//    compilerOptions.jvmTarget = JvmTarget.JVM_17
-//    jvm {
-//        jvmToolchain(11)
-//        withJava()
-//    }
-//    sourceSets {
-//        val jvmMain by getting {
-//            dependencies {
-//                implementation(compose.desktop.currentOs)
-//            }
-//        }
-//        val jvmTest by getting
-//    }
+
+}
+
+application {
+    mainClass = "eu.mjdev.desktop.MainKt"
 }
 
 //configurations {
@@ -64,20 +63,60 @@ allprojects {
         // coroutines
         runtimeOnly(libs.kotlinx.coroutines.swing)
         // compose desktop
-        implementation(compose.desktop.currentOs)
+//        implementation(compose.desktop.currentOs)
         // preview
-        implementation(compose.runtime)
+//        implementation(compose.runtime)
         // material 3
-        implementation(compose.material3)
+//        implementation(compose.material3)
         // icons
-        implementation(compose.materialIconsExtended)
+//        implementation(compose.materialIconsExtended)
         // foundation
-        implementation(compose.foundation)
+//        implementation(compose.foundation)
         // preview
-        implementation(compose.uiTooling)
-        implementation(compose.preview)
+//        implementation(compose.uiTooling)
+//        implementation(compose.preview)
         // resources
-        implementation(compose.components.resources)
+//        implementation(compose.components.resources)
+        // gobject
+        implementation("io.github.jwharm.javagi:gobject:0.10.2")
+        // glib
+        implementation("io.github.jwharm.javagi:glib:0.10.2")
+        // gmodule
+        implementation("io.github.jwharm.javagi:gmodule:0.10.2")
+        // gio
+        implementation("io.github.jwharm.javagi:gio:0.10.2")
+        // gst
+        implementation("io.github.jwharm.javagi:gst:0.10.2")
+        // gsk
+        implementation("io.github.jwharm.javagi:gsk:0.10.2")
+        // gdk
+        implementation("io.github.jwharm.javagi:gdk:0.10.2")
+        // gtk
+        implementation("io.github.jwharm.javagi:gtk:0.10.2")
+        // pango
+        implementation("io.github.jwharm.javagi:pango:0.10.2")
+        // pangocairo
+        implementation("io.github.jwharm.javagi:pangocairo:0.10.2")
+        // javascript core
+        implementation("io.github.jwharm.javagi:javascriptcore:0.10.2")
+        // gdkpixbuf
+        implementation("io.github.jwharm.javagi:gdkpixbuf:0.10.2")
+        // gstaudio
+        implementation("io.github.jwharm.javagi:gstaudio:0.10.2")
+        // graphene
+        implementation("io.github.jwharm.javagi:graphene:0.10.2")
+        // gstvideo
+        implementation("io.github.jwharm.javagi:gstvideo:0.10.2")
+        // webkitwebprocessextension
+        implementation("io.github.jwharm.javagi:webkitwebprocessextension:0.10.2")
+        // gtksourceview
+        implementation("io.github.jwharm.javagi:gtksourceview:0.10.2")
+        // adv
+        implementation("io.github.jwharm.javagi:adw:0.10.2")
+        // cairo
+//        implementation ("io.github.jwharm.cairobindings:cairo:1.18.4")
+        // compose gtk
+//        implementation("io.github.mmarco94:compose-4-gtk:0.1")
         // init & desktop files
         implementation(libs.ini4j)
         // http client
@@ -114,10 +153,10 @@ allprojects {
         // gettext
         implementation("org.gnu.gettext:libintl:0.18.3")
         // constraint
-        implementation("tech.annexflow.compose:constraintlayout-compose-multiplatform:0.4.0")
-        implementation("tech.annexflow.compose:constraintlayout-compose-multiplatform:0.5.0-alpha03")
-        implementation("tech.annexflow.compose:constraintlayout-compose-multiplatform:0.5.0-alpha03-shaded-core")
-        implementation("tech.annexflow.compose:constraintlayout-compose-multiplatform:0.5.0-alpha03-shaded")
+//        implementation("tech.annexflow.compose:constraintlayout-compose-multiplatform:0.4.0")
+//        implementation("tech.annexflow.compose:constraintlayout-compose-multiplatform:0.5.0-alpha03")
+//        implementation("tech.annexflow.compose:constraintlayout-compose-multiplatform:0.5.0-alpha03-shaded-core")
+//        implementation("tech.annexflow.compose:constraintlayout-compose-multiplatform:0.5.0-alpha03-shaded")
         // paths
 //        implementation("me.sujanpoudel.multiplatform.utils:multiplatform-paths:0.2.2")
         // files
@@ -186,57 +225,104 @@ allprojects {
     }
 }
 
-compose {
-    desktop {
-        application {
-            jvmArgs("--add-opens", "java.desktop/sun.awt=ALL-UNNAMED")
-            jvmArgs("--add-opens", "java.desktop/java.awt.peer=ALL-UNNAMED")
-            if (System.getProperty("os.name").contains("Mac")) {
-                jvmArgs("--add-opens", "java.desktop/sun.lwawt=ALL-UNNAMED")
-                jvmArgs("--add-opens", "java.desktop/sun.lwawt.macosx=ALL-UNNAMED")
-            }
-            mainClass = "eu.mjdev.desktop.MainKt"
-            nativeDistributions {
-                packageName = libs.versions.appName.get()
-                packageVersion = libs.versions.packageVersion.get()
-                description = libs.versions.appDescription.get()
-                copyright = libs.versions.appCopyright.get()
-                modules("jdk.unsupported")
-                outputBaseDir.set(project.rootDir.resolve("packages"))
-//                macOS {
-//                    iconFile.set(project.rootDir.resolve("icons").resolve("icon.icns"))
+//tasks.withType<JavaExec>().configureEach {
+//    jvmArgs(
+//        "--enable-preview",
+//        "--enable-native-access=ALL-UNNAMED",
+//        "-Djava.library.path=/usr/lib64:/lib64:/lib:/usr/lib:/lib/x86_64-linux-gnu"
+//    )
+//}
+
+//tasks.withType<Test>().configureEach {
+//    useJUnitPlatform()
+//    jvmArgs("--enable-preview")
+//}
+
+//tasks.withType<Copy>() {
+//    from {
+//        fileTree("native") {
+//            include ("*.so", "*.dylib", "*.dll")
+//        }
+//    }
+//    into {
+//        configurations.runtimeClasspath.files.collect { it.absolutePath }
+//    }
+//}
+
+//bintray {
+//    user = 'your_bintray_username'
+//    key = 'your_bintray_api_key'
+//
+//    publish = true
+//    pkg {
+//        repo = 'your_repository_name'
+//        name = project.name
+//        desc = 'Your desktop Compose application'
+//        version = project.version
+//        licenses = ['Apache-2.0']
+//        vcsUrl = 'https://github.com/your_username/your_project'
+//
+//        // Configure deb package dependencies
+//        deb {
+//            packageDescription = 'Your desktop Compose application'
+//            packageVersion = project.version
+//            packageArchitecture = 'amd64'  // Adjust based on your target architecture
+//            packageDepends = ['dbus-java', 'libgtk-3-dev']  // Replace with your actual dependencies
+//        }
+//    }
+//}
+
+//compose {
+//    desktop {
+//        application {
+//            jvmArgs("--add-opens", "java.desktop/sun.awt=ALL-UNNAMED")
+//            jvmArgs("--add-opens", "java.desktop/java.awt.peer=ALL-UNNAMED")
+//            if (System.getProperty("os.name").contains("Mac")) {
+//                jvmArgs("--add-opens", "java.desktop/sun.lwawt=ALL-UNNAMED")
+//                jvmArgs("--add-opens", "java.desktop/sun.lwawt.macosx=ALL-UNNAMED")
+//            }
+//            mainClass = "eu.mjdev.desktop.MainKt"
+//            nativeDistributions {
+//                packageName = libs.versions.appName.get()
+//                packageVersion = libs.versions.packageVersion.get()
+//                description = libs.versions.appDescription.get()
+//                copyright = libs.versions.appCopyright.get()
+//                modules("jdk.unsupported")
+//                outputBaseDir.set(project.rootDir.resolve("packages"))
+////                macOS {
+////                    iconFile.set(project.rootDir.resolve("icons").resolve("icon.icns"))
+////                }
+////                windows {
+////                    iconFile.set(project.rootDir.resolve("icons").resolve("icon.ico"))
+////                    exePackageVersion = "1.0.0"
+////                    msiPackageVersion = "1.0.0"
+////                }
+//                linux {
+////                    iconFile.set(project.rootDir.resolve("icons").resolve("icon.png"))
+////                    licenseFile.set(project.file("LICENSE.txt"))
+//                    appCategory = libs.versions.appCategory.get()
+//                    debMaintainer = libs.versions.appMaintainer.get()
+//                    menuGroup = libs.versions.appMenuGroup.get()
+//                    vendor = libs.versions.appVendor.get()
+//                    modules("jdk.security.auth")
 //                }
-//                windows {
-//                    iconFile.set(project.rootDir.resolve("icons").resolve("icon.ico"))
-//                    exePackageVersion = "1.0.0"
-//                    msiPackageVersion = "1.0.0"
+//                targetFormats(
+////                    TargetFormat.Dmg,
+////                    TargetFormat.Msi,
+//                    TargetFormat.Deb,
+////                    TargetFormat.Exe,
+//                    TargetFormat.AppImage,
+////                    TargetFormat.Pkg,
+//                    TargetFormat.Rpm
+//                )
+//                buildTypes.release.proguard {
+//                    configurationFiles.from("compose-desktop.pro")
 //                }
-                linux {
-//                    iconFile.set(project.rootDir.resolve("icons").resolve("icon.png"))
-//                    licenseFile.set(project.file("LICENSE.txt"))
-                    appCategory = libs.versions.appCategory.get()
-                    debMaintainer = libs.versions.appMaintainer.get()
-                    menuGroup = libs.versions.appMenuGroup.get()
-                    vendor = libs.versions.appVendor.get()
-                    modules("jdk.security.auth")
-                }
-                targetFormats(
-//                    TargetFormat.Dmg,
-//                    TargetFormat.Msi,
-                    TargetFormat.Deb,
-//                    TargetFormat.Exe,
-                    TargetFormat.AppImage,
-//                    TargetFormat.Pkg,
-                    TargetFormat.Rpm
-                )
-                buildTypes.release.proguard {
-                    configurationFiles.from("compose-desktop.pro")
-                }
-//                appResourcesRootDir.set(project.rootDir.resolve("resources"))
-            }
-        }
-    }
-}
+////                appResourcesRootDir.set(project.rootDir.resolve("resources"))
+//            }
+//        }
+//    }
+//}
 
 createTask(
     name = "cleanUp",
@@ -255,8 +341,8 @@ createTask(
     group = "mjdev",
     description = "Task packages project to be published."
 ) {
-    dependsOn("packageAppImage")
-    dependsOn("packageDeb")
+//    dependsOn("packageAppImage")
+//    dependsOn("packageDeb")
 //    dependsOn("packageDmg")
 //    dependsOn("packageExe")
 //    dependsOn("packageMsi")
@@ -272,7 +358,11 @@ createTask<JavaExec>(
 ) {
     mainClass = "eu.mjdev.desktop.MainKt"
     classpath = sourceSets.main.get().runtimeClasspath
-    jvmArgs("--enable-preview")
+    jvmArgs(
+        "--enable-preview",
+        "--enable-native-access=ALL-UNNAMED",
+        "-Djava.library.path=/usr/lib64:/lib64:/lib:/usr/lib:/lib/x86_64-linux-gnu"
+    )
 }
 createTask<JavaExec>(
     name = "runDebug",
@@ -281,7 +371,11 @@ createTask<JavaExec>(
 ) {
     mainClass = "eu.mjdev.desktop.MainKt"
     classpath = sourceSets.main.get().runtimeClasspath
-    args = arrayListOf("-d")
-    jvmArgs("--enable-preview")
+    args = arrayListOf("--debug")
+    jvmArgs(
+        "--enable-preview",
+        "--enable-native-access=ALL-UNNAMED",
+        "-Djava.library.path=/usr/lib64:/lib64:/lib:/usr/lib:/lib/x86_64-linux-gnu"
+    )
     // dbus-run-session mutter --wayland --nested
 }
